--- a/src/app.css
+++ b/src/app.css
@@ -1,43 +1,12 @@
 #root {
-    min-height: 100vh;
-    width: 100%;
-    min-height: 90vh;
-    display: flex;
-    justify-content: center;
+    min-height: 100vh;  
+    height: 100%;  
+    background-image: url('../src/assets/images/10default.jpg');  
+    background-repeat: no-repeat;  
+    background-size: cover;  
+    display: flex;  
+    justify-content: center;  
     align-items: center;
-    flex-direction: row;
-}
-
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    padding: 1rem;
-    
+  
   }
   
-/* 
-.container {
-    width: 100%;
-    max-width: 500px;
-    padding: 1rem;
-}
-
-.col {
-    width: 100%;
-    max-width: 500px; 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;  
-
-.seek {
-    width: 100%;
-    padding: 1px;
-}
-
-.card {
-    width: 100%;
-    padding: 1px;
-} */
