--- a/src/components/buscador.css
+++ b/src/components/buscador.css
@@ -1,20 +1,12 @@
 #root{
-  min-height: 100vh;    
-}
-
-.cardBuscador {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 2px 1px;
+  min-height: 100vh;  
+  min-width: 100%;    
 }
  
-
 .input-wrapper {  
   position: relative;
   display: flex;  
-  width: 100%; 
-  max-width: 500px;
+  
    justify-content: flex-end;  
    align-items: center;
 }
