--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+:root {  
   line-height: 1.3;
   font-weight: 400;
   scroll-behavior: smooth;
@@ -7,7 +6,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Raleway", serif;
+  font-family: "Raleway", serif, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;;
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
@@ -38,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
 }
 
-  video, svg {
+img, video, svg {
   max-width: 100%;
   height: auto;
 }
