--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,26 @@
 #root {
     min-height: 100vh;  
-    height: 100%;  
-    background-image: url('../src/assets/images/10default.jpg');  
-    background-repeat: no-repeat;  
-    background-size: cover;  
+    height: 100%;   
     display: flex;  
     justify-content: center;  
     align-items: center;
   
   }
   
+
+  .container {
+    min-height: 100vh;  
+  
+  }
+  .wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; 
+    justify-content: center; 
+    align-items: center;
+
+}
+ 
